[project]
name = "c10k-python"
version = "0.1.0"
description = "C10K in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]",
    "flask>=3.1.1",
    "gevent>=25.5.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "uvicorn-worker>=0.3.0",
    "uvloop>=0.21.0",
]
